Marker Item And Block Added

--- a/src/main/resources/lang/btasurveyingmod/en_US.lang
+++ b/src/main/resources/lang/btasurveyingmod/en_US.lang
@@ -1,1 +1,2 @@
-item.btasurveyingmod.theodolite.name = Theodolite
+item.btasurveyingmod.itemTheodolite.name = Theodolite
+item.btasurveyingmod.itemMarker.name = Marker
