Custom Keybind + Menu Option Added

--- a/src/main/resources/lang/btasurveyingmod/en_US.lang
+++ b/src/main/resources/lang/btasurveyingmod/en_US.lang
@@ -1,2 +1,5 @@
 item.btasurveyingmod.itemTheodolite.name = Theodolite
 item.btasurveyingmod.itemMarker.name = Marker
+surveying.options.title = BTASurveying
+surveying.options.category.keybinds.explicit = Better Than Cartography
+surveying.key.openMap = Open Map
